lab2/clang.output
Terminals unused in grammar

   _ALIGNAS
   _ALIGNOF
   _ATOMIC
   _BOOL
   _COMPLEX
   _GENERIC
   _IMAGINARY
   _NORETURN
   _STATIC_ASSERT
   _THREAD_LOCAL
   __FUNC__
   ERRORCHAR


语法

    0 $accept: program $end

    1 program: declarations_definitions

    2 declarations_definitions: declaration_definition
    3                         | declarations_definitions declaration_definition

    4 declaration_definition: function_definition
    5                       | declaration

    6 function_definition: declaration_definition_specifiers declarator block_statement
    7                    | declaration_definition_specifiers declarator declaration_list block_statement

    8 declaration: declaration_definition_specifiers init_declarator_list SEMICOLON
    9            | declaration_definition_specifiers SEMICOLON

   10 declaration_list: declaration
   11                 | declaration_list declaration

   12 declaration_definition_specifiers: storage_specifier declaration_definition_specifiers
   13                                  | storage_specifier
   14                                  | common_type_specifier declaration_definition_specifiers
   15                                  | common_type_specifier
   16                                  | common_type_qualifier declaration_definition_specifiers
   17                                  | common_type_qualifier
   18                                  | INLINE declaration_definition_specifiers
   19                                  | INLINE

   20 storage_specifier: REGISTER
   21                  | STATIC
   22                  | AUTO
   23                  | EXTERN
   24                  | TYPEDEF

   25 common_type_specifier: CHAR
   26                      | DOUBLE
   27                      | FLOAT
   28                      | INT
   29                      | LONG
   30                      | SHORT
   31                      | SIGNED
   32                      | UNSIGNED
   33                      | VOID
   34                      | struct_or_union_specifier
   35                      | enum_specifier

   36 common_type_qualifier: CONST
   37                      | RESTRICT
   38                      | VOLATILE

   39 struct_or_union_specifier: struct_or_union ID LBRACE struct_declaration_list RBRACE
   40                          | struct_or_union LBRACE struct_declaration_list RBRACE
   41                          | struct_or_union ID

   42 struct_or_union: STRUCT
   43                | UNION

   44 struct_declaration_list: struct_declaration
   45                        | struct_declaration_list struct_declaration

   46 init_declarator_list: init_declarator
   47                     | init_declarator_list COMMA init_declarator

   48 init_declarator: declarator
   49                | declarator DIRECTASSIGN initializer

   50 struct_declaration: common_specifier_qualifier struct_declarator_list SEMICOLON
   51                   | common_specifier_qualifier SEMICOLON

   52 common_specifier_qualifier: common_type_specifier common_specifier_qualifier
   53                           | common_type_specifier
   54                           | common_type_qualifier common_specifier_qualifier
   55                           | common_type_qualifier

   56 struct_declarator_list: struct_declarator
   57                       | struct_declarator_list COMMA struct_declarator

   58 struct_declarator: declarator
   59                  | declarator COLON const_expr
   60                  | COLON const_expr

   61 enum_specifier: ENUM ID LBRACE enumerator_list RBRACE
   62               | ENUM ID LBRACE enumerator_list COMMA RBRACE
   63               | ENUM LBRACE enumerator_list RBRACE
   64               | ENUM LBRACE enumerator_list COMMA RBRACE
   65               | ENUM ID

   66 enumerator_list: enumerator
   67                | enumerator_list COMMA enumerator

   68 enumerator: ID
   69           | ID DIRECTASSIGN const_expr

   70 declarator: pointer bare_declarator
   71           | bare_declarator

   72 bare_declarator: ID
   73                | LPARENTHESE declarator RPARENTHESE
   74                | bare_declarator LBRACKET RBRACKET
   75                | bare_declarator LBRACKET STAR RBRACKET
   76                | bare_declarator LBRACKET common_specifier_qualifier STAR RBRACKET
   77                | bare_declarator LBRACKET common_specifier_qualifier assign_expr RBRACKET
   78                | bare_declarator LBRACKET common_specifier_qualifier RBRACKET
   79                | bare_declarator LBRACKET assign_expr RBRACKET
   80                | bare_declarator LPARENTHESE param_type_list RPARENTHESE
   81                | bare_declarator LPARENTHESE id_list RPARENTHESE
   82                | bare_declarator LPARENTHESE RPARENTHESE

   83 pointer: STAR common_type_qualifiers
   84        | STAR
   85        | STAR common_type_qualifiers pointer
   86        | STAR pointer

   87 common_type_qualifiers: common_type_qualifier
   88                       | common_type_qualifiers common_type_qualifier

   89 param_type_list: param_list
   90                | param_list COMMA ELLIPSIS

   91 param_list: param_declaration
   92           | param_list COMMA param_declaration

   93 param_declaration: declaration_definition_specifiers declarator
   94                  | declaration_definition_specifiers declarator_without_id
   95                  | declaration_definition_specifiers

   96 id_list: ID
   97        | id_list COMMA ID

   98 initializer: assign_expr
   99            | LBRACE initializer_list RBRACE
  100            | LBRACE initializer_list COMMA RBRACE

  101 initializer_list: initializer
  102                 | initializer_list COMMA initializer

  103 type_name: common_specifier_qualifier declarator_without_id
  104          | common_specifier_qualifier

  105 declarator_without_id: pointer
  106                      | pointer bare_declarator_without_id
  107                      | bare_declarator_without_id

  108 bare_declarator_without_id: LPARENTHESE declarator_without_id RPARENTHESE
  109                           | LBRACKET RBRACKET
  110                           | LBRACKET STAR RBRACKET
  111                           | LBRACKET common_specifier_qualifier assign_expr RBRACKET
  112                           | LBRACKET common_specifier_qualifier RBRACKET
  113                           | LBRACKET assign_expr RBRACKET
  114                           | bare_declarator_without_id LBRACKET RBRACKET
  115                           | bare_declarator_without_id LBRACKET STAR RBRACKET
  116                           | bare_declarator_without_id LBRACKET common_specifier_qualifier assign_expr RBRACKET
  117                           | bare_declarator_without_id LBRACKET common_specifier_qualifier RBRACKET
  118                           | bare_declarator_without_id LBRACKET assign_expr RBRACKET
  119                           | bare_declarator_without_id LPARENTHESE param_type_list RPARENTHESE
  120                           | bare_declarator_without_id LPARENTHESE RPARENTHESE
  121                           | LPARENTHESE param_type_list RPARENTHESE
  122                           | LPARENTHESE RPARENTHESE

  123 statement: labeled_statement
  124          | comma_expr_statement
  125          | block_statement
  126          | branch_statement
  127          | iteration_statement
  128          | jump_statement

  129 labeled_statement: CASE const_expr COLON statement
  130                  | DEFAULT COLON statement
  131                  | ID COLON statement

  132 block_statement: LBRACE declaration_statement_list RBRACE
  133                | LBRACE RBRACE

  134 declaration_statement_list: declaration_statement
  135                           | declaration_statement_list declaration_statement

  136 declaration_statement: declaration
  137                      | statement

  138 branch_statement: IF LPARENTHESE comma_expr RPARENTHESE statement
  139                 | IF LPARENTHESE comma_expr RPARENTHESE statement ELSE statement
  140                 | SWITCH LPARENTHESE comma_expr RPARENTHESE statement

  141 comma_expr_statement: SEMICOLON
  142                     | comma_expr SEMICOLON

  143 iteration_statement: FOR LPARENTHESE comma_expr_statement comma_expr_statement comma_expr RPARENTHESE statement
  144                    | FOR LPARENTHESE comma_expr_statement comma_expr_statement RPARENTHESE statement
  145                    | FOR LPARENTHESE declaration comma_expr_statement comma_expr RPARENTHESE statement
  146                    | FOR LPARENTHESE declaration comma_expr_statement RPARENTHESE statement
  147                    | WHILE LPARENTHESE comma_expr RPARENTHESE statement
  148                    | DO statement WHILE LPARENTHESE comma_expr RPARENTHESE SEMICOLON

  149 jump_statement: RETURN comma_expr SEMICOLON
  150               | RETURN SEMICOLON
  151               | CONTINUE SEMICOLON
  152               | BREAK SEMICOLON
  153               | GOTO ID SEMICOLON

  154 comma_expr: assign_expr
  155           | comma_expr COMMA assign_expr

  156 assign_expr: condition_expr
  157            | unary_expr assign_op assign_expr

  158 assign_op: DIRECTASSIGN
  159          | ADDASSIGN
  160          | SUBASSIGN
  161          | MULASSIGN
  162          | DIVASSIGN
  163          | MODASSIGN
  164          | LSASSIGN
  165          | RSASSIGN
  166          | BANDASSIGN
  167          | BORASSIGN
  168          | XORASSIGN

  169 condition_expr: or_expr
  170               | or_expr QUESTION comma_expr COLON condition_expr

  171 const_expr: condition_expr

  172 or_expr: and_expr
  173        | or_expr OR and_expr

  174 and_expr: bor_expr
  175         | and_expr AND bor_expr

  176 bor_expr: xor_expr
  177         | bor_expr BOR xor_expr

  178 xor_expr: band_expr
  179         | xor_expr XOR band_expr

  180 band_expr: eq_neq_expr
  181          | band_expr ESPERLUETTE eq_neq_expr

  182 eq_neq_expr: lt_gt_le_ge_expr
  183            | eq_neq_expr EQ lt_gt_le_ge_expr
  184            | eq_neq_expr NE lt_gt_le_ge_expr

  185 lt_gt_le_ge_expr: shift_expr
  186                 | lt_gt_le_ge_expr LANGLE shift_expr
  187                 | lt_gt_le_ge_expr RANGLE shift_expr
  188                 | lt_gt_le_ge_expr LE shift_expr
  189                 | lt_gt_le_ge_expr GE shift_expr

  190 shift_expr: add_sub_expr
  191           | shift_expr LS add_sub_expr
  192           | shift_expr RS add_sub_expr

  193 add_sub_expr: mult_div_mod_expr
  194             | add_sub_expr PLUS mult_div_mod_expr
  195             | add_sub_expr MINUS mult_div_mod_expr

  196 mult_div_mod_expr: cast_expr
  197                  | mult_div_mod_expr STAR cast_expr
  198                  | mult_div_mod_expr DIV cast_expr
  199                  | mult_div_mod_expr MOD cast_expr

  200 cast_expr: unary_expr
  201          | LPARENTHESE type_name RPARENTHESE cast_expr

  202 unary_expr: postfix_expr
  203           | INC unary_expr
  204           | DEC unary_expr
  205           | unary_op cast_expr
  206           | SIZEOF unary_expr
  207           | SIZEOF LPARENTHESE type_name RPARENTHESE

  208 unary_op: ESPERLUETTE
  209         | STAR
  210         | PLUS
  211         | MINUS
  212         | BNOT
  213         | NOT

  214 postfix_expr: basic_expr
  215             | postfix_expr INC
  216             | postfix_expr DEC
  217             | postfix_expr LBRACKET comma_expr RBRACKET
  218             | postfix_expr LPARENTHESE RPARENTHESE
  219             | postfix_expr LPARENTHESE comma_expr RPARENTHESE
  220             | postfix_expr PERIOD ID
  221             | postfix_expr ARROW ID
  222             | LPARENTHESE type_name RPARENTHESE LBRACE initializer_list RBRACE
  223             | LPARENTHESE type_name RPARENTHESE LBRACE initializer_list COMMA RBRACE

  224 basic_expr: naive_expr
  225           | LPARENTHESE comma_expr RPARENTHESE

  226 naive_expr: ID
  227           | INT_CONSTANT
  228           | FLOAT_CONSTANT
  229           | CHARACTER
  230           | STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 22
BREAK (259) 152
CASE (260) 129
CHAR (261) 25
CONST (262) 36
CONTINUE (263) 151
DEFAULT (264) 130
DO (265) 148
DOUBLE (266) 26
ENUM (267) 61 62 63 64 65
EXTERN (268) 23
FLOAT (269) 27
FOR (270) 143 144 145 146
GOTO (271) 153
IF (272) 138 139
INLINE (273) 18 19
INT (274) 28
LONG (275) 29
REGISTER (276) 20
RESTRICT (277) 37
RETURN (278) 149 150
SHORT (279) 30
SIGNED (280) 31
SIZEOF (281) 206 207
STATIC (282) 21
STRUCT (283) 42
SWITCH (284) 140
TYPEDEF (285) 24
UNION (286) 43
UNSIGNED (287) 32
VOID (288) 33
VOLATILE (289) 38
WHILE (290) 147 148
_ALIGNAS (291)
_ALIGNOF (292)
_ATOMIC (293)
_BOOL (294)
_COMPLEX (295)
_GENERIC (296)
_IMAGINARY (297)
_NORETURN (298)
_STATIC_ASSERT (299)
_THREAD_LOCAL (300)
__FUNC__ (301)
ID (302) 39 41 61 62 65 68 69 72 96 97 131 153 220 221 226
INT_CONSTANT (303) 227
FLOAT_CONSTANT (304) 228
CHARACTER (305) 229
STRING (306) 230
PLUS (307) 194 210
MINUS (308) 195 211
STAR (309) 75 76 83 84 85 86 110 115 197 209
DIV (310) 198
MOD (311) 199
INC (312) 203 215
DEC (313) 204 216
EQ (314) 183
NE (315) 184
LANGLE (316) 186
RANGLE (317) 187
GE (318) 189
LE (319) 188
NOT (320) 213
AND (321) 175
OR (322) 173
ESPERLUETTE (323) 181 208
BNOT (324) 212
BOR (325) 177
XOR (326) 179
LS (327) 191
RS (328) 192
DIRECTASSIGN (329) 49 69 158
ADDASSIGN (330) 159
SUBASSIGN (331) 160
MULASSIGN (332) 161
DIVASSIGN (333) 162
MODASSIGN (334) 163
BANDASSIGN (335) 166
XORASSIGN (336) 168
BORASSIGN (337) 167
LSASSIGN (338) 164
RSASSIGN (339) 165
ARROW (340) 221
PERIOD (341) 220
COMMA (342) 47 57 62 64 67 90 92 97 100 102 155 223
ELLIPSIS (343) 90
QUESTION (344) 170
COLON (345) 59 60 129 130 131 170
SEMICOLON (346) 8 9 50 51 141 142 148 149 150 151 152 153
LPARENTHESE (347) 73 80 81 82 108 119 120 121 122 138 139 140 143 144
    145 146 147 148 201 207 218 219 222 223 225
RPARENTHESE (348) 73 80 81 82 108 119 120 121 122 138 139 140 143 144
    145 146 147 148 201 207 218 219 222 223 225
LBRACE (349) 39 40 61 62 63 64 99 100 132 133 222 223
RBRACE (350) 39 40 61 62 63 64 99 100 132 133 222 223
LBRACKET (351) 74 75 76 77 78 79 109 110 111 112 113 114 115 116 117
    118 217
RBRACKET (352) 74 75 76 77 78 79 109 110 111 112 113 114 115 116 117
    118 217
ERRORCHAR (353)
"then" (354)
ELSE (355) 139


Nonterminals, with rules where they appear

$accept (101)
    左： 0
program (102)
    左： 1, 右： 0
declarations_definitions (103)
    左： 2 3, 右： 1 3
declaration_definition (104)
    左： 4 5, 右： 2 3
function_definition (105)
    左： 6 7, 右： 4
declaration (106)
    左： 8 9, 右： 5 10 11 136 145 146
declaration_list (107)
    左： 10 11, 右： 7 11
declaration_definition_specifiers (108)
    左： 12 13 14 15 16 17 18 19, 右： 6 7 8 9 12 14 16 18 93 94
    95
storage_specifier (109)
    左： 20 21 22 23 24, 右： 12 13
common_type_specifier (110)
    左： 25 26 27 28 29 30 31 32 33 34 35, 右： 14 15 52 53
common_type_qualifier (111)
    左： 36 37 38, 右： 16 17 54 55 87 88
struct_or_union_specifier (112)
    左： 39 40 41, 右： 34
struct_or_union (113)
    左： 42 43, 右： 39 40 41
struct_declaration_list (114)
    左： 44 45, 右： 39 40 45
init_declarator_list (115)
    左： 46 47, 右： 8 47
init_declarator (116)
    左： 48 49, 右： 46 47
struct_declaration (117)
    左： 50 51, 右： 44 45
common_specifier_qualifier (118)
    左： 52 53 54 55, 右： 50 51 52 54 76 77 78 103 104 111 112
    116 117
struct_declarator_list (119)
    左： 56 57, 右： 50 57
struct_declarator (120)
    左： 58 59 60, 右： 56 57
enum_specifier (121)
    左： 61 62 63 64 65, 右： 35
enumerator_list (122)
    左： 66 67, 右： 61 62 63 64 67
enumerator (123)
    左： 68 69, 右： 66 67
declarator (124)
    左： 70 71, 右： 6 7 48 49 58 59 73 93
bare_declarator (125)
    左： 72 73 74 75 76 77 78 79 80 81 82, 右： 70 71 74 75 76
    77 78 79 80 81 82
pointer (126)
    左： 83 84 85 86, 右： 70 85 86 105 106
common_type_qualifiers (127)
    左： 87 88, 右： 83 85 88
param_type_list (128)
    左： 89 90, 右： 80 119 121
param_list (129)
    左： 91 92, 右： 89 90 92
param_declaration (130)
    左： 93 94 95, 右： 91 92
id_list (131)
    左： 96 97, 右： 81 97
initializer (132)
    左： 98 99 100, 右： 49 101 102
initializer_list (133)
    左： 101 102, 右： 99 100 102 222 223
type_name (134)
    左： 103 104, 右： 201 207 222 223
declarator_without_id (135)
    左： 105 106 107, 右： 94 103 108
bare_declarator_without_id (136)
    左： 108 109 110 111 112 113 114 115 116 117 118 119 120 121
    122, 右： 106 107 114 115 116 117 118 119 120
statement (137)
    左： 123 124 125 126 127 128, 右： 129 130 131 137 138 139
    140 143 144 145 146 147 148
labeled_statement (138)
    左： 129 130 131, 右： 123
block_statement (139)
    左： 132 133, 右： 6 7 125
declaration_statement_list (140)
    左： 134 135, 右： 132 135
declaration_statement (141)
    左： 136 137, 右： 134 135
branch_statement (142)
    左： 138 139 140, 右： 126
comma_expr_statement (143)
    左： 141 142, 右： 124 143 144 145 146
iteration_statement (144)
    左： 143 144 145 146 147 148, 右： 127
jump_statement (145)
    左： 149 150 151 152 153, 右： 128
comma_expr (146)
    左： 154 155, 右： 138 139 140 142 143 145 147 148 149 155
    170 217 219 225
assign_expr (147)
    左： 156 157, 右： 77 79 98 111 113 116 118 154 155 157
assign_op (148)
    左： 158 159 160 161 162 163 164 165 166 167 168, 右： 157
condition_expr (149)
    左： 169 170, 右： 156 170 171
const_expr (150)
    左： 171, 右： 59 60 69 129
or_expr (151)
    左： 172 173, 右： 169 170 173
and_expr (152)
    左： 174 175, 右： 172 173 175
bor_expr (153)
    左： 176 177, 右： 174 175 177
xor_expr (154)
    左： 178 179, 右： 176 177 179
band_expr (155)
    左： 180 181, 右： 178 179 181
eq_neq_expr (156)
    左： 182 183 184, 右： 180 181 183 184
lt_gt_le_ge_expr (157)
    左： 185 186 187 188 189, 右： 182 183 184 186 187 188 189
shift_expr (158)
    左： 190 191 192, 右： 185 186 187 188 189 191 192
add_sub_expr (159)
    左： 193 194 195, 右： 190 191 192 194 195
mult_div_mod_expr (160)
    左： 196 197 198 199, 右： 193 194 195 197 198 199
cast_expr (161)
    左： 200 201, 右： 196 197 198 199 201 205
unary_expr (162)
    左： 202 203 204 205 206 207, 右： 157 200 203 204 206
unary_op (163)
    左： 208 209 210 211 212 213, 右： 205
postfix_expr (164)
    左： 214 215 216 217 218 219 220 221 222 223, 右： 202 215
    216 217 218 219 220 221
basic_expr (165)
    左： 224 225, 右： 214
naive_expr (166)
    左： 226 227 228 229 230, 右： 224


State 0

    0 $accept: . program $end

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    CONST     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    ENUM      shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INLINE    shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    RESTRICT  shift, and go to state 12
    SHORT     shift, and go to state 13
    SIGNED    shift, and go to state 14
    STATIC    shift, and go to state 15
    STRUCT    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    UNION     shift, and go to state 18
    UNSIGNED  shift, and go to state 19
    VOID      shift, and go to state 20
    VOLATILE  shift, and go to state 21

    program                            转到状态 22
    declarations_definitions           转到状态 23
    declaration_definition             转到状态 24
    function_definition                转到状态 25
    declaration                        转到状态 26
    declaration_definition_specifiers  转到状态 27
    storage_specifier                  转到状态 28
    common_type_specifier              转到状态 29
    common_type_qualifier              转到状态 30
    struct_or_union_specifier          转到状态 31
    struct_or_union                    转到状态 32
    enum_specifier                     转到状态 33


State 1

   22 storage_specifier: AUTO .

    $default  reduce using rule 22 (storage_specifier)


State 2

   25 common_type_specifier: CHAR .

    $default  reduce using rule 25 (common_type_specifier)


State 3

   36 common_type_qualifier: CONST .

    $default  reduce using rule 36 (common_type_qualifier)


State 4

   26 common_type_specifier: DOUBLE .

    $default  reduce using rule 26 (common_type_specifier)


State 5

   61 enum_specifier: ENUM . ID LBRACE enumerator_list RBRACE
   62               | ENUM . ID LBRACE enumerator_list COMMA RBRACE
   63               | ENUM . LBRACE enumerator_list RBRACE
   64               | ENUM . LBRACE enumerator_list COMMA RBRACE
   65               | ENUM . ID

    ID      shift, and go to state 34
    LBRACE  shift, and go to state 35


State 6

   23 storage_specifier: EXTERN .

    $default  reduce using rule 23 (storage_specifier)


State 7

   27 common_type_specifier: FLOAT .

    $default  reduce using rule 27 (common_type_specifier)


State 8

   18 declaration_definition_specifiers: INLINE . declaration_definition_specifiers
   19                                  | INLINE .

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    CONST     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    ENUM      shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INLINE    shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    RESTRICT  shift, and go to state 12
    SHORT     shift, and go to state 13
    SIGNED    shift, and go to state 14
    STATIC    shift, and go to state 15
    STRUCT    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    UNION     shift, and go to state 18
    UNSIGNED  shift, and go to state 19
    VOID      shift, and go to state 20
    VOLATILE  shift, and go to state 21

    $default  reduce using rule 19 (declaration_definition_specifiers)

    declaration_definition_specifiers  转到状态 36
    storage_specifier                  转到状态 28
    common_type_specifier              转到状态 29
    common_type_qualifier              转到状态 30
    struct_or_union_specifier          转到状态 31
    struct_or_union                    转到状态 32
    enum_specifier                     转到状态 33


State 9

   28 common_type_specifier: INT .

    $default  reduce using rule 28 (common_type_specifier)


State 10

   29 common_type_specifier: LONG .

    $default  reduce using rule 29 (common_type_specifier)


State 11

   20 storage_specifier: REGISTER .

    $default  reduce using rule 20 (storage_specifier)


State 12

   37 common_type_qualifier: RESTRICT .

    $default  reduce using rule 37 (common_type_qualifier)


State 13

   30 common_type_specifier: SHORT .

    $default  reduce using rule 30 (common_type_specifier)


State 14

   31 common_type_specifier: SIGNED .

    $default  reduce using rule 31 (common_type_specifier)


State 15

   21 storage_specifier: STATIC .

    $default  reduce using rule 21 (storage_specifier)


State 16

   42 struct_or_union: STRUCT .

    $default  reduce using rule 42 (struct_or_union)


State 17

   24 storage_specifier: TYPEDEF .

    $default  reduce using rule 24 (storage_specifier)


State 18

   43 struct_or_union: UNION .

    $default  reduce using rule 43 (struct_or_union)


State 19

   32 common_type_specifier: UNSIGNED .

    $default  reduce using rule 32 (common_type_specifier)


State 20

   33 common_type_specifier: VOID .

    $default  reduce using rule 33 (common_type_specifier)


State 21

   38 common_type_qualifier: VOLATILE .

    $default  reduce using rule 38 (common_type_qualifier)


State 22

    0 $accept: program . $end

    $end  shift, and go to state 37


State 23

    1 program: declarations_definitions .
    3 declarations_definitions: declarations_definitions . declaration_definition

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    CONST     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    ENUM      shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INLINE    shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    RESTRICT  shift, and go to state 12
    SHORT     shift, and go to state 13
    SIGNED    shift, and go to state 14
    STATIC    shift, and go to state 15
    STRUCT    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    UNION     shift, and go to state 18
    UNSIGNED  shift, and go to state 19
    VOID      shift, and go to state 20
    VOLATILE  shift, and go to state 21

    $default  reduce using rule 1 (program)

    declaration_definition             转到状态 38
    function_definition                转到状态 25
    declaration                        转到状态 26
    declaration_definition_specifiers  转到状态 27
    storage_specifier                  转到状态 28
    common_type_specifier              转到状态 29
    common_type_qualifier              转到状态 30
    struct_or_union_specifier          转到状态 31
    struct_or_union                    转到状态 32
    enum_specifier                     转到状态 33


State 24

    2 declarations_definitions: declaration_definition .

    $default  reduce using rule 2 (declarations_definitions)


State 25

    4 declaration_definition: function_definition .

    $default  reduce using rule 4 (declaration_definition)


State 26

    5 declaration_definition: declaration .

    $default  reduce using rule 5 (declaration_definition)


State 27

    6 function_definition: declaration_definition_specifiers . declarator block_statement
    7                    | declaration_definition_specifiers . declarator declaration_list block_statement
    8 declaration: declaration_definition_specifiers . init_declarator_list SEMICOLON
    9            | declaration_definition_specifiers . SEMICOLON

    ID           shift, and go to state 39
    STAR         shift, and go to state 40
    SEMICOLON    shift, and go to state 41
    LPARENTHESE  shift, and go to state 42

    init_declarator_list  转到状态 43
    init_declarator       转到状态 44
    declarator            转到状态 45
    bare_declarator       转到状态 46
    pointer               转到状态 47


State 28

   12 declaration_definition_specifiers: storage_specifier . declaration_definition_specifiers
   13                                  | storage_specifier .

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    CONST     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    ENUM      shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INLINE    shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    RESTRICT  shift, and go to state 12
    SHORT     shift, and go to state 13
    SIGNED    shift, and go to state 14
    STATIC    shift, and go to state 15
    STRUCT    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    UNION     shift, and go to state 18
    UNSIGNED  shift, and go to state 19
    VOID      shift, and go to state 20
    VOLATILE  shift, and go to state 21

    $default  reduce using rule 13 (declaration_definition_specifiers)

    declaration_definition_specifiers  转到状态 48
    storage_specifier                  转到状态 28
    common_type_specifier              转到状态 29
    common_type_qualifier              转到状态 30
    struct_or_union_specifier          转到状态 31
    struct_or_union                    转到状态 32
    enum_specifier                     转到状态 33


State 29

   14 declaration_definition_specifiers: common_type_specifier . declaration_definition_specifiers
   15                                  | common_type_specifier .

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    CONST     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    ENUM      shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INLINE    shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    RESTRICT  shift, and go to state 12
    SHORT     shift, and go to state 13
    SIGNED    shift, and go to state 14
    STATIC    shift, and go to state 15
    STRUCT    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    UNION     shift, and go to state 18
    UNSIGNED  shift, and go to state 19
    VOID      shift, and go to state 20
    VOLATILE  shift, and go to state 21

    $default  reduce using rule 15 (declaration_definition_specifiers)

    declaration_definition_specifiers  转到状态 49
    storage_specifier                  转到状态 28
    common_type_specifier              转到状态 29
    common_type_qualifier              转到状态 30
    struct_or_union_specifier          转到状态 31
    struct_or_union                    转到状态 32
    enum_specifier                     转到状态 33


State 30

   16 declaration_definition_specifiers: common_type_qualifier . declaration_definition_specifiers
   17                                  | common_type_qualifier .

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    CONST     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    ENUM      shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INLINE    shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    RESTRICT  shift, and go to state 12
    SHORT     shift, and go to state 13
    SIGNED    shift, and go to state 14
    STATIC    shift, and go to state 15
    STRUCT    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    UNION     shift, and go to state 18
    UNSIGNED  shift, and go to state 19
    VOID      shift, and go to state 20
    VOLATILE  shift, and go to state 21

    $default  reduce using rule 17 (declaration_definition_specifiers)

    declaration_definition_specifiers  转到状态 50
    storage_specifier                  转到状态 28
    common_type_specifier              转到状态 29
    common_type_qualifier              转到状态 30
    struct_or_union_specifier          转到状态 31
    struct_or_union                    转到状态 32
    enum_specifier                     转到状态 33


State 31

   34 common_type_specifier: struct_or_union_specifier .

    $default  reduce using rule 34 (common_type_specifier)


State 32

   39 struct_or_union_specifier: struct_or_union . ID LBRACE struct_declaration_list RBRACE
   40                          | struct_or_union . LBRACE struct_declaration_list RBRACE
   41                          | struct_or_union . ID

    ID      shift, and go to state 51
    LBRACE  shift, and go to state 52


State 33

   35 common_type_specifier: enum_specifier .

    $default  reduce using rule 35 (common_type_specifier)


State 34

   61 enum_specifier: ENUM ID . LBRACE enumerator_list RBRACE
   62               | ENUM ID . LBRACE enumerator_list COMMA RBRACE
   65               | ENUM ID .

    LBRACE  shift, and go to state 53

    $default  reduce using rule 65 (enum_specifier)


State 35

   63 enum_specifier: ENUM LBRACE . enumerator_list RBRACE
   64               | ENUM LBRACE . enumerator_list COMMA RBRACE

    ID  shift, and go to state 54

    enumerator_list  转到状态 55
    enumerator       转到状态 56


State 36

   18 declaration_definition_specifiers: INLINE declaration_definition_specifiers .

    $default  reduce using rule 18 (declaration_definition_specifiers)


State 37

    0 $accept: program $end .

    $default  接受


State 38

    3 declarations_definitions: declarations_definitions declaration_definition .

    $default  reduce using rule 3 (declarations_definitions)


State 39

   72 bare_declarator: ID .

    $default  reduce using rule 72 (bare_declarator)


State 40

   83 pointer: STAR . common_type_qualifiers
   84        | STAR .
   85        | STAR . common_type_qualifiers pointer
   86        | STAR . pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 21
    STAR      shift, and go to state 40

    $default  reduce using rule 84 (pointer)

    common_type_qualifier   转到状态 57
    pointer                 转到状态 58
    common_type_qualifiers  转到状态 59


State 41

    9 declaration: declaration_definition_specifiers SEMICOLON .

    $default  reduce using rule 9 (declaration)


State 42

   73 bare_declarator: LPARENTHESE . declarator RPARENTHESE

    ID           shift, and go to state 39
    STAR         shift, and go to state 40
    LPARENTHESE  shift, and go to state 42

    declarator       转到状态 60
    bare_declarator  转到状态 46
    pointer          转到状态 47


State 43

    8 declaration: declaration_definition_specifiers init_declarator_list . SEMICOLON
   47 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 61
    SEMICOLON  shift, and go to state 62


State 44

   46 init_declarator_list: init_declarator .

    $default  reduce using rule 46 (init_declarator_list)


State 45

    6 function_definition: declaration_definition_specifiers declarator . block_statement
    7                    | declaration_definition_specifiers declarator . declaration_list block_statement
   48 init_declarator: declarator .
   49                | declarator . DIRECTASSIGN initializer

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INLINE        shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    REGISTER      shift, and go to state 11
    RESTRICT      shift, and go to state 12
    SHORT         shift, and go to state 13
    SIGNED        shift, and go to state 14
    STATIC        shift, and go to state 15
    STRUCT        shift, and go to state 16
    TYPEDEF       shift, and go to state 17
    UNION         shift, and go to state 18
    UNSIGNED      shift, and go to state 19
    VOID          shift, and go to state 20
    VOLATILE      shift, and go to state 21
    DIRECTASSIGN  shift, and go to state 63
    LBRACE        shift, and go to state 64

    $default  reduce using rule 48 (init_declarator)

    declaration                        转到状态 65
    declaration_list                   转到状态 66
    declaration_definition_specifiers  转到状态 67
    storage_specifier                  转到状态 28
    common_type_specifier              转到状态 29
    common_type_qualifier              转到状态 30
    struct_or_union_specifier          转到状态 31
    struct_or_union                    转到状态 32
    enum_specifier                     转到状态 33
    block_statement                    转到状态 68


State 46
